Right side overflow fix

--- a/style.css
+++ b/style.css
@@ -252,7 +252,7 @@ button a {
 
     main #images-area .right-side img {
         height: 50vh;
-        width: 20vw;
+        width: 15vw;
     }
 
     main #images-area .left-side img {
